--- a/src/components/ButtonGroup/style.css
+++ b/src/components/ButtonGroup/style.css
@@ -7,6 +7,5 @@
   .e-button-group {
     border-top: var(--e-space-0) solid var(--e-color-balance);
     margin-top: var(--e-space-6);
-    padding-top: var(--e-space-4);
   }
 }
